samples/_failures_safe/1761141118_0cd29e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_979de98d.c: In function ‘main’:
./samples/SAFE/__tmp_979de98d.c:134:24: error: missing terminating " character
  134 |                 printf("\nMatrix Multiplication
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_979de98d.c:134:17: error: expected expression at end of input
  134 |                 printf("\nMatrix Multiplication
      |                 ^~~~~~
./samples/SAFE/__tmp_979de98d.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_979de98d.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_979de98d.c:134:17: error: expected declaration or statement at end of input
